--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <h3>Test git commands</h1>
+    <h3>Test git commands1</h1>
   </body>
 </html>
